<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nnm.team91.mine.edit.EditTodoActivity">

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/edit_bottom_button_01"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/edit_menu_btn_a"
            android:textSize="25sp"
            android:textColor="@color/buttonMenu"
            android:background="@null"/>
        <Button
            android:id="@+id/edit_bottom_button_02"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/edit_menu_btn_b"
            android:textSize="25sp"
            android:textColor="@color/buttonMenu"
            android:background="@null"/>
        <Button
            android:id="@+id/edit_bottom_button_03"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/edit_menu_btn_c"
            android:textSize="25sp"
            android:textColor="@color/buttonMenu"
            android:background="@null"/>
        <Button
            android:id="@+id/edit_bottom_button_04"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/edit_menu_btn_d"
            android:textSize="25sp"
            android:textColor="@color/buttonMenu"
            android:background="@null"/>

    </android.support.v7.widget.ButtonBarLayout>

    <android.support.design.widget.FloatingActionButton
        app:fabSize="normal"
        android:id="@+id/todo_edit_float_btn"
        android:src="@drawable/ic_apps_black"
        android:layout_gravity="center|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.design.widget.CoordinatorLayout>
